[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scenes/Menu/player_stats.gd" id="1"]

[node name="PlayerStats" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player Statistics"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player: Loading..."

[node name="BattlesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Total Battles: 0"

[node name="WinsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Wins: 0"

[node name="LossesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Losses: 0"

[node name="WinRateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Win Rate: 0.0%"

[node name="LastPlayedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Last Played: Never"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="RecentBattlesTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Recent Battles:"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RecentBattlesList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"